--- a/vercel.json
+++ b/vercel.json
@@ -4,13 +4,5 @@
   "installCommand": "npm install",
   "framework": "nextjs",
   "ignoreCommand": "exit 0",
-  "outputDirectory": ".next",
-  "env": {
-    "NEXT_PUBLIC_FIREBASE_API_KEY": "placeholder-api-key",
-    "NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN": "placeholder-auth-domain",
-    "NEXT_PUBLIC_FIREBASE_PROJECT_ID": "placeholder-project-id",
-    "NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET": "placeholder-storage-bucket",
-    "NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID": "placeholder-sender-id",
-    "NEXT_PUBLIC_FIREBASE_APP_ID": "placeholder-app-id"
-  }
+  "outputDirectory": ".next"
 } 
